# ovbook

./: README.md  SPEC.md  main.py  pyproject.toml
.hermes/plans/: 2026-06-04-iteration-003.md
doc/: ITERATION-002.md  ITERATION-003.md  ITERATION-004.md  ITERATION-005-PLAN.md  ITERATION-005.md  ITERATION-006.md  SPEC.md
src/ovbook/: __init__.py  cli.py  extract.py  frontmatter.py  profile.py  schema.py  split.py  writer.py
src/ovbook/readers/: __init__.py  article.py  base.py  epub.py  fb2.py  pdf.py
tests/: conftest.py  test_cli.py  test_extract.py  test_extract_rich.py  test_filter.py  test_frontmatter.py  test_hierarchy.py  test_integration.py  test_metadata.py  test_profile.py  test_readers_base.py  test_readers_epub.py  test_readers_fb2.py  test_readers_pdf.py  test_readers_registry.py  test_schema.py  test_split.py  test_writer.py  test_writer_chapter_levels.py  test_writer_hierarchy.py
tests/fixtures/: generate_pdf.py  sample.fb2
tests/ov/: README.md  _lib.sh  run.sh  test_func_abstract.sh  test_func_find.sh  test_func_glob.sh  test_func_grep.sh  test_func_ls.sh  test_func_overview.sh  test_func_read.sh  test_func_stat.sh  test_func_tree.sh  test_func_watches.sh  test_health_auth.sh  test_health_server.sh
