[project]
name = "ovbook"
version = "0.1.0"
description = "Convert books to structured markdown chunks for OpenViking indexing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.1.1",
    "pymupdf>=1.27.2.3",
    "typer>=0.26.7",
]

[project.scripts]
ovbook = "ovbook.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
